# gruve-kit

./: DESIGN-FOR-GRUVE.md  PROTOCOL.md  README.md
sdk-go/: README.md  go.mod  gruve.go  gruve_test.go
sdk-go/example/: announce_demo.go
sdk-js/: index.d.ts  index.js
sdk-py/: README.md  pyproject.toml
sdk-py/examples/: announce_demo.py
sdk-py/gruve_sdk/: __init__.py
